--- a/rosbag_tools/src/bag_creator/config/settings_for_append.yaml
+++ b/rosbag_tools/src/bag_creator/config/settings_for_append.yaml
@@ -4,13 +4,13 @@ image_folder_path: /media/pesg/intel384/image_down/
 # corresponding timestamp file path:
 timestamp_file_path: /media/pesg/intel384/bag_create_0131/used_stamps/
 
-bag_names: ["1005_00", "1005_01", "1005_07"]
+bag_names: ["1018_00_img10hz600p_with_learned_depth"]
 
 # down-sample of dataset frequency:
-down_sample_ratio: 4
+down_sample_ratio: 1
 
 # output folder path (must exist):
-output_folder_path: /media/pesg/intel384/bag_create_0131/bags/
+output_folder_path: /media/spiderman/zhipeng_8t/datasets/BotanicGarden/1018-00/1018_00_img10hz600p
 
 # cam topics in rosbag:
 left_cam_topic: /dalsa_gray/left/image_raw
